# chromey

./: .gitignore  Cargo.toml  README.md
cdp/: Cargo.toml  browser_protocol.pdl
cdp/src/: lib.rs
cdp/tests/: generate.rs
examples/: bytes-control.rs  connect.rs  fetcher-tokio.rs  http_cache.rs
fetcher/: Cargo.toml
fetcher/src/: build_info.rs  error.rs  host.rs  kind.rs  lib.rs  platform.rs
fetcher/src/fetcher/: installation.rs  mod.rs  options.rs
fetcher/src/runtime/: mod.rs
fetcher/src/version/: channel.rs  error.rs  metadata.rs  milestone.rs  mod.rs  revision.rs  version.rs
fetcher/tests/: verify.rs
pdl/: Cargo.toml
src/: browser.rs  cache.rs  conn.rs  detection.rs  http.rs  lib.rs  listeners.rs  mouse.rs  page.rs  utils.rs
src/cache/: manager.rs  remote.rs
src/handler/: emulation.rs  frame.rs  mod.rs  network.rs  network_utils.rs  page.rs  target.rs  target_message_future.rs  viewport.rs
src/handler/blockers/: block_websites.rs  mod.rs
tests/: cache_round_trip.rs
types/src/: lib.rs
