[package]
name = "chromey"
version = "2.37.131"
rust-version = "1.70"
authors = ["j-mendez <jeff@spider.cloud>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/spider-rs/chromey"
repository = "https://github.com/spider-rs/chromey"
description = "Concurrent chrome devtools protocol automation library for Rust"
keywords = ["chrome", "cdp", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[lib]
name = "chromiumoxide"

[dependencies]
tokio-tungstenite = "0.27"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
which = { version = "8", optional = true }
thiserror = "1"
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
] }
tracing = "0.1"
pin-project-lite = "0.2"
dunce = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
lazy_static = "1"
phf = { version = "0.11", features = ["macros"] }
adblock = { version = "0.9", optional = true, default-features = false, features = [
    "embedded-domain-resolver",
    "full-regex-handling",
] }
rand = "0.9"
case_insensitive_string = { version = "0.2", features = ["compact", "serde"] }
hashbrown = { version = "0.15", default-features = true }
aho-corasick = "1"
sonic-rs = { version = "0.5", optional = true, features = ["utf8_lossy"] }
spider_network_blocker = "0"
spider_chromiumoxide_types = { path = "types", version = "0.7" }
spider_chromiumoxide_cdp = { path = "cdp", version = "0.7" }
spider_chromiumoxide_fetcher = { path = "fetcher", version = "0.7", default-features = false, optional = true }

[dependencies.spider_fingerprint]
version = "2"
default-features = false
features = ["serde", "headers"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dependencies.spider_firewall]
version = "2"
optional = true
default-features = false

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

[features]
default = ["bytes", "simd", "default-tls", "serde0", "auto-detect-executable"]
stream = ["tokio-tungstenite/stream"]
fetcher = []
bytes = []
adblock = ["dep:adblock"]
simd = ["dep:sonic-rs"]
firewall = ["dep:spider_firewall"]
firewall-default = ["firewall", "spider_firewall/default"]
firewall-rustls = ["firewall", "spider_firewall/rustls"]
chrome_tls_connection = ["tokio-tungstenite/native-tls"]
default-tls = ["reqwest/default-tls"]
rust-tls = ["reqwest/rustls-tls"]
serde0 = ["spider_chromiumoxide_cdp/serde0"]
auto-detect-executable = ["dep:which"]
dynamic-versions = ["spider_fingerprint/dynamic-versions"]

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rusttls-tokio = [
    "fetcher",
    "spider_chromiumoxide_fetcher/_rustls-tokio",
]
_fetcher-native-tokio = [
    "fetcher",
    "spider_chromiumoxide_fetcher/_native-tokio",
]

[[example]]
name = "wiki-tokio"

[[example]]
name = "iframe-workaround"

[[example]]
name = "storage-cookie"

[[example]]
name = "console-logs"

[[example]]
name = "httpfuture"

[[example]]
name = "fetcher-tokio"
required-features = ["_fetcher-native-tokio"]
